# examen_parcial_2

./: CMakeLists.txt  README.md  main.cpp
Ejercicio1/: Ejercicio1.cpp  Ejercicio1.h
Ejercicio2/: Ejercicio2.cpp  Ejercicio2.h
Ejercicio3/: Ejercicio3.cpp  Ejercicio3.h
Ejercicio4/: Ejercicio4.cpp  Ejercicio4.h  functions.cpp  functions.h
