cmake_minimum_required(VERSION 3.29)
project(examen_parcial_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(examen_parcial_2
    main.cpp
        Ejercicio1/Ejercicio1.h
        Ejercicio1/Ejercicio1.cpp
        Ejercicio2/Ejercicio2.h
        Ejercicio2/Ejercicio2.cpp
        Ejercicio3/Ejercicio3.h
        Ejercicio3/Ejercicio3.cpp
        Ejercicio4/Ejercicio4.h
        Ejercicio4/Ejercicio4.cpp
        Ejercicio4/functions.h
        Ejercicio4/functions.cpp)
